v1.3.0/product-specifications/core-functions/8.-correct-record.md
# 8. Correct record

Mistakes can be made during any administrative process and therefore the ability to correct these in a safe manner, along with an audit trail, needs to be available.

OpenCRVS allows a Registrar to correct a record, provide a reason for the correction, attach accompanying supporting documents and make the correction, keeping an audit of all actions throughout.

### **Pre-condition**

A record has the status ‘Registered’, ‘Certified’ or ‘Issued’

### **Triggers**

Registrar is requested to correct a record

### **Standard flow**

1. Registrar searches for the record or finds it in their workqueue
2. User opens the record audit
3. User assigns themselves to the record
4. Record is downloaded and is now available to be corrected offline
5. User clicks “Correct record”
6. User selects who is requesting a change to the record
7. Requester ID is checked if it is the previous informant, mother or father
8. User clicks “Change” on the detail that needs to be corrected
9. User makes correction
10. User review change/s
11. User uploads any supporting documents
12. User selects the reason for correction and adds any additional comments
13. User reviews the correction summary and collects any fees
14. On confirming correction, declaration is sent to the Outbox for processing
15. Once processed the declaration status remains the same

### **Post conditions**

* User can choose to re-certify record
* Record audit is updated to show that the record has been ‘Corrected’

{% embed url="https://www.loom.com/share/3ac668c3ba85436fb2eaebaf3c5b5eab?sid=156c4659-2ca3-4726-ba65-ed7ba48b2af2" %}
